@@ -24,6 +24,9 @@
 	* gtkglext/Graphics/UI/Gtk/OpenGL/Types.chs: remove file that was
 	accidentally added to cvs.
 
+	* sourceview/sourceview.h, sourceview/sourceview.pkg.in,
+	sourceview/sourceview.package.conf.in: remove unnecessary include.
+
 2005-11-08 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* sourceview/sourceview.pkg.in: probable fix for the problem of
